# architecture_python

./: README.md  workspace.dsl
02_rest_api/: Makefile  README.md  docker-compose.yaml  test.sh
02_rest_api/includes/handlers/: record_handler.h
02_rest_api/includes/integrations/: laboratory_integration.h
02_rest_api/includes/models/: medical_record.h  patient.h  user.h
02_rest_api/includes/services/: patient_service.h  record_service.h
02_rest_api/src/handlers/: patient_handler.cpp
02_rest_api/src/integrations/: insurance_integration.cpp
02_rest_api/src/services/: patient_service.cpp
02_rest_api/src/utils/: json_response.cpp
02_rest_api/tests/: test_patient_service.cpp
03_sql/: .env  CMakeLists.txt  Dockerfile  Makefile  README.md
03_sql/configs/: config_vars.yaml  static_config.yaml
03_sql/includes/handlers/: patient_handler.h
03_sql/includes/integrations/: insurance_integration.h
03_sql/includes/integrations/postgres/: connection_pool.h  patient_repository.h  user_repository.h
03_sql/includes/models/: user.h
03_sql/includes/services/: user_service.h
03_sql/sql/: data.sql  optimization.md  schema.sql
03_sql/src/: main.cpp
03_sql/src/auth/: jwt_manager.cpp
03_sql/src/integrations/: insurance_integration.cpp  laboratory_integration.cpp
03_sql/src/integrations/postgres/: record_repository.cpp  user_repository.cpp
03_sql/src/services/: notification_service.cpp  record_service.cpp  user_service.cpp
03_sql/tests/: CMakeLists.txt  test_patient_service.cpp  test_record_service.cpp  test_user_service.cpp
04_mongodb/: .dockerignore  CMakePresets.json  Dockerfile  Makefile  README.md  data.js  docker-compose.yaml  queries.js  validation.js
04_mongodb/includes/auth/: jwt_manager.h
04_mongodb/includes/cache/: cache_manager.h
04_mongodb/includes/integrations/mongo/: connection_pool.h  user_repository.h
04_mongodb/includes/models/: medical_record.h  patient.h  requests.h
04_mongodb/includes/services/: notification_service.h  patient_service.h
04_mongodb/includes/utils/: json_response.h
04_mongodb/src/: main.cpp
04_mongodb/src/auth/: jwt_manager.cpp
04_mongodb/src/handlers/: record_handler.cpp
04_mongodb/src/integrations/mongo/: patient_repository.cpp
04_mongodb/src/integrations/postgres/: connection_pool.cpp
04_mongodb/src/models/: medical_record.cpp
05/: CMakeLists.txt  README.md  data.js  docker-compose.yaml  openapi.yaml  schema_design.md  validation.js
05/configs/: static_config.yaml
05/includes/handlers/: auth_handler.h  router_factory.h  user_handler.h
05/includes/integrations/mongo/: patient_repository.h  record_repository.h
05/includes/integrations/postgres/: record_repository.h
05/includes/models/: patient.h  user.h
05/includes/services/: record_service.h  user_service.h
05/nginx/: nginx.conf
05/sql/: queries.sql
05/src/cache/: cache_manager.cpp
05/src/handlers/: auth_handler.cpp  router_factory.cpp  user_handler.cpp
05/src/integrations/mongo/: connection_pool.cpp  record_repository.cpp  user_repository.cpp
05/src/integrations/postgres/: patient_repository.cpp
05/src/models/: patient.cpp  user.cpp
05/src/services/: patient_service.cpp  record_service.cpp
